--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/121a930925.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/logo.css">
     <link rel="stylesheet" href="./css/menu.css">       
-    <link rel="stylesheet" href="./css/home.css">      
-    <link rel="stylesheet" href="./css/sobre-mim.css">      
+    <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/projetos.css">      
+    <link rel="stylesheet" href="./css/sobre-mim.css">
+    <link rel="stylesheet" href="./css/contato.css">      
     <title>Portifólio - Clara Martins Oliveira</title>
 </head>
 <body>
@@ -50,12 +53,122 @@
             </div>
         </section>
         <section class="sobre-mim" id="sobre-mim">
-            <h2 class="section-title">Sobre Mim</h2>
-            <div class="description"></div>
-            <div class="skills"></div>
+            <h2 class="section__title">Sobre Mim</h2>
+            <div class="description">
+                <h3 class="description__title">Quem sou?</h3>
+                <p class="description__text">Sou iniciante na área de criação e manutenção de sites, tenho conhecimento em prototipação e design, sempre pensando na experiência do usuário. Sou apaixonado pelo mundo digital e principalmente desenvolvimento, sempre procurando inspiração nos meus colegas de trabalho e no mundo que me rodeia.</p>
+            </div>
+            <div class="skills">
+                <h3 class="skills__title">Skills</h3>
+                <ul class="skills__icons">
+                    <li class="skills__icon">
+                        <i class="fa-brands fa-html5"></i>
+                        <span>HTML</span>
+                    </li>
+                    <li class="skills__icon">
+                        <i class="fa-brands fa-css3"></i>
+                        <span>CSS</span>
+                    </li>
+                    <li class="skills__icon">
+                        <i class="fa-brands fa-js"></i>
+                        <span>Js</span>
+                    </li>
+                    <li class="skills__icon">
+                        <i class="fa-brands fa-figma"></i>
+                        <span>FIGMA</span>
+                    </li>
+                    <li class="skills__icon">
+                        <i class="fa-brands fa-github"></i>
+                        <span>GITHUB</span>
+                    </li>
+                    <li class="skills__icon">
+                        <i class="fa-brands fa-java"></i>
+                        <span>JAVA</span>
+                    </li>
+                </ul>
+
+            </div>
         </section>
-        <section class="projetos" id="projetos"></section>
-        <section class="contato" id="contato"></section>
+        <section class="projetos" id="projetos">
+            <h2 class="section__title">Projetos</h2>
+            <ul class="card__container">
+                <li>
+                    <a href="#" class="card">
+                        <img src="./img/headphone.png" alt="">
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="card">
+                        <img src="./img/pikachu.png" alt="">
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="card">
+                        <img src="./img/headphone.png" alt="">
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="card">
+                        <img src="./img/iron.png" alt="">
+                    </a>
+                </li>
+            </ul>
+        </section>
+        <section class="contato" id="contato">
+            <h2 class="section__title">Contato</h2>
+            <ul class="contato-container">
+                <li>
+                    <h3 class="contato-title">Contato</h3>
+                </li>
+                <li>
+                    <div class="contatos-item">
+                        <i class="fa-solid fa-phone contato-item-icon"></i>
+                        <span class="contato-item__text">(11) 4774-4700</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="contatos-item">
+                        <i class="fa-solid fa-envelope contato-item__icon"></i>
+                        <span class="contato-item__text">clarasesi44@gmail.com</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="contatos-item">
+                        <i class="fa-solid fa-location-dot contato-item-icon"></i>
+                        <span class="contato-item__text">Rua Elton Silva, 905</span>
+                    </div>
+                </li>
+            </ul>
+            <ul class="social-container">
+                <li class="social">
+                    <i class="fa-brands fa-instagram"></i>
+                </li>
+                <li class="social">
+                    <i class="fa-brands fa-youtube"></i>
+                </li>
+                <li class="social">
+                    <i class="fa-brands fa-twitter"></i>
+                </li>
+                <li class="social">
+                    <i class="fa-brands fa-linkedin"></i>
+                </li>
+            </ul>
+            <ul class="links-container">
+                <h3 class="links-title">Links</h3>
+                <li>
+                    <a href="#home">Início</a>
+                </li>
+                <li>
+                    <a href="#sobre-mim">Sobre mim</a>
+                </li>
+                <li>
+                    <a href="#projetos">Projetos</a>
+                </li>
+                <li>
+                    <a href="#contato">Contato</a>
+                </li>
+            </ul>
+        </section>
     </main>
     <footer>footer</footer>
 </body>
