--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         </div>
     </header>
     <main>
+        <a href="#" class="voltar">
+            <i class="fa-light fa-circle-arrow-up"></i>
+        </a>
         <section class="home" id="home">
             <div class="profile">
                 <img class="profile__foto" src="./img/foto.png" alt="foto">
