--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/projetos.css">      
     <link rel="stylesheet" href="./css/sobre-mim.css">
+    <link rel="stylesheet" href="./css/tablet.css">
+    <link rel="stylesheet" href="./css/celular.css ">
     <link rel="stylesheet" href="./css/contato.css">      
     <title>Portifólio - Clara Martins Oliveira</title>
 </head>
@@ -39,11 +41,14 @@
                 </li>
                 </ul>
             </nav>
+            <a href="" class="menuzinho">
+                <i class="fa-solid fa-bars"></i>
+            </a>
         </div>
     </header>
     <main>
         <a href="#" class="voltar">
-            <i class="fa-light fa-circle-arrow-up"></i>
+            <i class="fa-solid fa-circle-arrow-up"></i>
         </a>
         <section class="home" id="home">
             <div class="profile">
@@ -96,22 +101,22 @@
             <h2 class="section__title">Projetos</h2>
             <ul class="card__container">
                 <li>
-                    <a href="#" class="card">
+                    <a href="https://oliveiraclara.github.io/headphone-purple/" class="card">
                         <img src="./img/headphone.png" alt="">
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="card">
+                    <a href="https://oliveiraclara.github.io/landing-page-pikachu/" class="card">
                         <img src="./img/pikachu.png" alt="">
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="card">
-                        <img src="./img/headphone.png" alt="">
+                    <a href="https://oliveiraclara.github.io/get-jinxed/" class="card">
+                        <img src="./img/jinx.png" alt="">
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="card">
+                    <a href="https://oliveiraclara.github.io/landing-page-iron-man/" class="card">
                         <img src="./img/iron.png" alt="">
                     </a>
                 </li>
@@ -173,6 +178,6 @@
             </ul>
         </section>
     </main>
-    <footer>footer</footer>
+    <footer>2022 Copyright © - Clara Martins Oliveira</footer>
 </body>
 </html>
